# thanktoanf2025

./: .env.example  .env.local.example  .gitignore  GOOGLE_LOGIN_SETUP.md  README.md  astro.config.mjs  package-lock.json  package.json
.vercel/output/: config.json
diary/: apr05.md
md/: intro.md  top10khacbiet-cokhuan-vikhuan.md
proto/3dmolecule/: benzene.js  co2.js  h2o.js  index.html  nucleotide.js  ribose.js  viewer.js
proto/answerFFT/: index.html
proto/bot/: README.md
proto/bot/polling-rust/: Cargo.toml  README.md
proto/bot/polling-rust/src/: main.rs
proto/dnasimalte/: benzene.js  co2.js  glucose.js  h2o.html  h2o.js  main.js  nucleotide.js  ribose.js  rna.js
proto/gomp3/: README.md  go.mod  go.sum  main.go  spec.md
proto/irannewssimulate/: app.js  index.html  spec.md  styles.css
proto/itemdata/: life.json
proto/itemshop/: index.html  package-lock.json  package.json
proto/riot-sub/: item.css  item.html  items.json
proto/serverlesslocal/: README.md
proto/tools/toolrscpu/: Cargo.toml
proto/tools/toolrscpu/src/: main.rs
proto/vimsimulate/: index.html  spec.md
proto/websocket1/: README.md  client-a.html  client-b.html  package-lock.json  package.json  server.js
public/apps/: hsk1-vocab.html
public/htmlblog/: e-coli-adaptation.html  earth-jupiter.html  earthmom1.html  fungi.html  nationgen.html
public/my-asset/: README.md
scripts/: build-hsk-vocab-html.mjs
scripts/data/: en-vi-cache.json  hsk-old-2-exclusive.json  hsk-old-3-exclusive.json  hsk1-curated.json
src/: consts.js  env.d.ts
src/components/: BaseHead.astro  (+10 more)
(+153 files in other folders)
