[package]
name = "telegram-bot-polling-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.26"

