[package]
name = "toolrscpu"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
humantime = "2"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
